feat: offline build phase 1

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>RSCam Prototype</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="RSCam Prototype" />
+    <meta name="keywords" content="RSCam Prototype" />
+    <meta name="author" content="RSCam Prototype" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="manifest" content="/manifest.json" />
+    <link rel="icon" type="image/png" href="/favico.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="shortcut icon" href="/favico.png" />
+    <link rel="mask-icon" href="/masked-icon.svg" color="#5bbad5" />
   </head>
   <body>
     <div id="root"></div>
